--- a/daily-work/20170207/website/css/hero.css
+++ b/daily-work/20170207/website/css/hero.css
@@ -1,29 +1,44 @@
-.orbit-container {
-  position: relative;
-  height: 500px; }
-
-  .orbit-caption {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(10, 10, 10, 0.9); }
-
-    .orbit-caption p {
+.service {
+  width: 100%;
+  height: 320px;
+  margin: 80px 0;
+  text-align: center;
+  border: 1px solid #ddd;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease; }
+  .service .service-icon-box {
+    position: relative;
+    top: 100px;
+    display: inline-block;
+    margin-bottom: 40px;
+    padding: 10px;
+    background: white;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease; }
+    .service .service-heading {
       position: relative;
-      top: 50%;
-      -webkit-transform: translateY(-50%);
-      -ms-transform: translateY(-50%);
-      transform: translateY(-50%);
-      text-align: center;
-      color: #fefefe;
-      font-size: 48px;
-      font-weight: 900; }
-
-      @media screen and (max-width: 39.9375em) {
-        .orbit-caption p {
-          font-size: 12px;
-          font-weight: 400; } }
-          .orbit-bullets {
-            display: none; }
+      top: 80px;
+      -webkit-transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+      transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55); }
+      .service .service-description {
+        width: 80%;
+        margin: 0 auto;
+        opacity: 0;
+        -webkit-transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
+        -webkit-transform: scale(0);
+        -ms-transform: scale(0);
+        transform: scale(0); }
+        .service .service-icon-box > img.service-icon {
+          width: 50px; }
+          .service:hover {
+            border-color: #00a8ff; }
+            .service:hover .service-icon-box {
+              top: -30px; }
+              .service:hover .service-heading {
+                top: -30px; }
+                .service:hover .service-description {
+                  opacity: 1;
+                  -webkit-transform: scale(1);
+                  -ms-transform: scale(1);
+                  transform: scale(1); }
