--- a/daily-work/20170207/website/css/nav.css
+++ b/daily-work/20170207/website/css/nav.css
@@ -1,37 +1,36 @@
-/* Variables */
-/* Small Navigation */
-.logo-small {
-  float: right; }
+.header {
+  text-align: center;
+  background: #074E68;
+  background-size: cover;
+  background-color: rgb(0,0,200);
+  position: relative;
+  overflow: visible;
+  padding-top: 2.5rem;
+  padding-bottom: 4.9rem; }
+  .header .headline {
+    color: #ffe; }
 
-  .title-bar {
-    padding: 0 .5rem; }
-
-    .menu-icon,
-    .title-bar-title {
-      position: relative;
-      top: 10px; }
-
-      /* Medium-Up Navigation */
-      @media only screen and (min-width: 40rem) {
-        .logo-wrapper {
-          position: relative; }
-          .logo-wrapper .logo {
-            width: 118px;
-            height: 92px;
-            position: absolute;
-            left: 50%;
-            right: 50%;
-            top: -6px;
-            margin-left: -59px; }
-
-            .top-bar-right {
-              width: 50%;
-              padding-left: 86px; }
-              .top-bar-right ul {
-                float: left; }
-
-                .top-bar-left {
-                  width: 50%;
-                  padding-right: 86px; }
-                  .top-bar-left ul {
-                    float: right; } }
+    .header-subnav {
+      float: none;
+      position: absolute;
+      text-align: center;
+      margin: 0 auto;
+      bottom: 0;
+      width: 100%; }
+      .header-subnav li {
+        float: none;
+        display: inline-block; }
+        .header-subnav li a {
+          padding: 0.9rem 1rem;
+          font-size: 0.75rem;
+          color: #ffe;
+          text-transform: uppercase;
+          display: block;
+          font-weight: bold;
+          letter-spacing: 1px;
+          transition: all 0.35s ease-in-out; }
+          .header-subnav li a.is-active {
+            background: rgba(250, 250, 250, 0.15); }
+            .header-subnav li a:hover {
+              background: rgba(250, 250, 250, 0.15);
+              transition: all 0.35s ease-in-out; }
