--- a/daily-work/20170207/website/dododo/css2/nav.css
+++ b/daily-work/20170207/website/dododo/css2/nav.css
@@ -2,10 +2,11 @@
   text-align: center;
   background: #074E68;
   background-size: cover;
+  background-color: rgb(0,0,200);
   position: relative;
   overflow: visible;
-  padding-top: 2.5rem;
-  padding-bottom: 4.9rem; }
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem; }
   .header .headline {
     color: #ffe; }
 
